force-app/main/default/objects/RequestLog__c/RequestLog__c.object-meta.xml
<CustomObject>
    <label>Request Log</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Request Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>