force-app/main/default/objects/RequestLog__c/fields/AttemptNumber__c.field-meta.xml
<CustomField>
    <fullName>AttemptNumber__c</fullName>
    <label>Attempt Number</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>