force-app/main/default/objects/RequestLog__c/fields/SourceLog__c.field-meta.xml
<CustomField>
    <fullName>SourceLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Log</label>
    <referenceTo>RequestLog__c</referenceTo>
    <relationshipLabel>Related Request Logs</relationshipLabel>
    <relationshipName>RelatedRequestLogs</relationshipName>
    <type>Lookup</type>
</CustomField>